syntax = "proto2";

option go_package = "github.com/inovacc/omni/pkg/buf/internal/protocompile/internal/testprotos/nopkg;nopkg";

import public "nopkg/desc_test_nopkg_new.proto";