syntax = "proto3";

package test.v1;

message UserRequest {
  string user_id = 1;
  string name = 2;
}

message UserResponse {
  string id = 1;
  string name = 2;
  int32 age = 3;
}

service UserService {
  rpc GetUser(UserRequest) returns (UserResponse);
}
